--- a/pages/oportunidades.html
+++ b/pages/oportunidades.html
@@ -9,29 +9,35 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./destinos.html">Destinos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./oportunidades.html">Oportunidades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./galeria.html">Galeria</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </nav>
+            <nav class="navbar justify-content-end mx-auto navbar-expand-lg ">
+                <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./destinos.html">Destinos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./oportunidades.html">Oportunidades</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./galeria.html">Galeria</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
+                    </ul>
+                </div>
+                </div>
+            </nav>
     </header>
-
     <main>
-        <div class="tarjetas">
+        <div class="tarjetas ">
     <div class="card">
         <img class="card-img mx-auto" src="../img/thailand/tailandia (1).jpg" alt="playa caribe">
         <div class="card-content">
@@ -47,7 +53,7 @@
     <div class="card">
         <img class="card-img mx-auto" src="../img/Maldivas/maldivas (20).jpg" alt="muelle polinesia">
         <div class="card-content">
-            <h3>PLAYA RELAX</h3>
+            <h3>PLAYA RELAX MALDIVAS</h3>
             <p>Las vacaciones relajantes que buscabas. Podrás disfrutar de las paradisíacas playas en Islas Maldivas. Agarra tu coco, acomódate en la tumbona y relájate, estás de vacaciones en Maldivas.</p>
             <div class="linea1"></div>
             <img class="calendario" src="../img/icons8-calendario-40.png" alt="">
