--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,8 +9,13 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="nav justify-content-end">
+        <nav class="navbar  justify-content-end mx-auto navbar-expand-lg ">
+            <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                 </li>
@@ -26,7 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./contacto.html">Contacto</a>
                 </li>
-            </ul>
+                </ul>
+            </div>
+            </div>
         </nav>
     </header>
     <section class="contacto">
