--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -44,12 +44,12 @@
             Relájate en las paradisíacas playas de Koh Samui, donde podrás disfrutar de emocionantes deportes acuáticos o simplemente entregarte al descanso. Sumérgete en la rica cultura e historia de Chiang Mai, una encantadora ciudad repleta de antiguos templos y mercados tradicionales. Embárcate en una apasionante aventura submarina en Koh Tao, renombrada por sus espectaculares arrecifes de coral.
             Deleita tus sentidos con la tranquilidad que ofrece el Parque Nacional de Erawan, hogar de impresionantes cascadas y aguas turquesas. Experimenta la serenidad de Railay Beach y aprovecha la emocionante oportunidad de escalar sus únicas formaciones rocosas.
             Con nuestro exclusivo paquete, Tailandia se convierte en tu destino de ensueño, repleto de una asombrosa belleza natural, una cultura fascinante y experiencias inolvidables. ¡Prepárate para sumergirte en el paraíso tailandés y crear recuerdos inolvidables!</p>
-    <img class="img1" src="../img/thailand/tailandia (1).jpg" alt="playa maldivas">
-    <img class="img2" src="../img/thailand/tailandia (2).jpg" alt="">
-    <img class="img3" src="../img/thailand/tailandia (3).jpg" alt="">
-    <img class="img4" src="../img/thailand/tailandia (4).jpg" alt="">
-    <img class="img5" src="../img/thailand/tailandia (5).jpg" alt="">
-    <img class="img6" src="../img/thailand/tailandia.jpg" alt="">
+    <img class="img1" src="../img/thailand/tailandia (1).jpg" alt="playa tailandia">
+    <img class="img2" src="../img/thailand/tailandia (2).jpg" alt="playa tailandia">
+    <img class="img3" src="../img/thailand/tailandia (3).jpg" alt="playa tailandia">
+    <img class="img4" src="../img/thailand/tailandia (4).jpg" alt="playa tailandia">
+    <img class="img5" src="../img/thailand/tailandia (5).jpg" alt="playa tailandia">
+    <img class="img6" src="../img/thailand/tailandia.jpg" alt="playa tailandia">
     </div>
     <h1 class="tailandia">Maldivas</h1>
     <div class="destinos">
@@ -58,11 +58,11 @@
             Explora la rica cultura y la hospitalidad de las islas locales, donde podrás sumergirte en la vida cotidiana de los habitantes y descubrir tradiciones auténticas. Disfruta de la privacidad y el lujo en las villas sobre el agua en los complejos turísticos de lujo, donde cada momento se convierte en una experiencia única.
             Experimenta la maravilla de las Maldivas al relajarte en las impresionantes playas de arena blanca y explorar la vida marina multicolor mientras practicas snorkel. Con nuestro paquete exclusivo, las Maldivas se transforman en tu destino de sueños, lleno de belleza natural, lujo incomparable y momentos inolvidables. ¡Prepárate para sumergirte en el paraíso maldivo y crear recuerdos que perdurarán para siempre!</p>
     <img class="img1" src="../img/Maldivas/maldivas (13).jpg" alt="playa maldivas">
-    <img class="img2" src="../img/Maldivas/maldivas (16).jpg" alt="">
-    <img class="img3" src="../img/Maldivas/maldivas (18).jpg" alt="">
-    <img class="img4" src="../img/Maldivas/maldivas (1).jpg" alt="">
-    <img class="img5" src="../img/Maldivas/maldivas (10).jpg" alt="">
-    <img class="img6" src="../img/Maldivas/maldivas (20).jpg" alt="">
+    <img class="img2" src="../img/Maldivas/maldivas (16).jpg" alt="playa maldivas">
+    <img class="img3" src="../img/Maldivas/maldivas (18).jpg" alt="playa maldivas">
+    <img class="img4" src="../img/Maldivas/maldivas (1).jpg" alt="playa maldivas">
+    <img class="img5" src="../img/Maldivas/maldivas (10).jpg" alt="playa maldivas">
+    <img class="img6" src="../img/Maldivas/maldivas (20).jpg" alt="playa maldivas">
     </div>
     <h1 class="tailandia">Bora bora</h1>
     <div class="destinos">
@@ -70,12 +70,12 @@
             Relájate en las exclusivas villas sobre el agua, donde el lujo y la privacidad se fusionan para ofrecerte una experiencia inigualable. Disfruta de cenas románticas con vistas al atardecer y déjate llevar por la serenidad que ofrece este paraíso tropical.
             Embárcate en emocionantes excursiones en kayak o paddleboard, explorando la rica vida marina que habita en los arrecifes coralinos. Descubre la cultura polinesia en las islas locales, donde la hospitalidad y las tradiciones locales te sumergirán en un mundo único.
             Experimenta la magia de Bora Bora al bucear entre tiburones y rayas, o simplemente relájate en las playas de arena suave. Con nuestro paquete exclusivo, Bora Bora se convierte en tu destino de ensueño, repleto de belleza natural, lujo incomparable y experiencias que perdurarán toda la vida. ¡Prepárate para sumergirte en el encanto de Bora Bora y crear recuerdos inolvidables!</p>
-    <img class="img1" src="../img/borabora/borabora (1).jpg" alt="playa maldivas">
-    <img class="img2" src="../img/borabora/borabora (2).jpg" alt="">
-    <img class="img3" src="../img/borabora/borabora (3).jpg" alt="">
-    <img class="img4" src="../img/borabora/borabora (4).jpg" alt="">
-    <img class="img5" src="../img/borabora/borabora (5).jpg" alt="">
-    <img class="img6" src="../img/borabora/borabora (6).jpg" alt="">
+    <img class="img1" src="../img/borabora/borabora (1).jpg" alt="playa bora bora">
+    <img class="img2" src="../img/borabora/borabora (2).jpg" alt="playa bora bora">
+    <img class="img3" src="../img/borabora/borabora (3).jpg" alt="playa bora bora">
+    <img class="img4" src="../img/borabora/borabora (4).jpg" alt="playa bora bora">
+    <img class="img5" src="../img/borabora/borabora (5).jpg" alt="playa bora bora">
+    <img class="img6" src="../img/borabora/borabora (6).jpg" alt="playa bora bora">
     </div>
 </main>
     <footer>
