--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>TRAVEL - Inicio</title>
+    <meta name="description" content="Los mejores viajes al paraiso ">
+    <meta name="keywords" content="playa, vuelos, paraiso, promociones, polinesia, maldivas, tailandia, tarjeta">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body class="index">
     <header>
@@ -40,7 +42,12 @@
 <main class="index">
     <div class="portada">
         <div class="texto">
-            <h1>TRAVEL</h1> 
+            <h1 class="letra1">T</h1>
+            <h1 class="letra2">R</h1> 
+            <h1 class="letra3">A</h1> 
+            <h1 class="letra4">V</h1> 
+            <h1 class="letra5">E</h1> 
+            <h1 class="letra6">L</h1> 
         </div>
         <div class="portada-1"><img src="./img/portada1.jpg" alt="playa caribe"></div>
         <div class="portada-2"><img src="./img/portada2.jpg" alt="polinesia francesa"></div>
