--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -8,13 +8,14 @@
     <meta name="keywords" content="viajes, playa, vuelos, paraiso, turismo, economico, tarjeta">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="icon" href="/img/favicom.png" type="image/x-icon">
 </head>
-<body>
+<body class="bodygaleria">
     <header>
-        <nav class="navbar  justify-content-end mx-auto navbar-expand-lg ">
-            <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+        <nav class="navbar  justify-content-end mx-5 navbar-expand-lg bg-transparent ">
+            <div class="container-fluid bg-transparent">
+            <button class="navbar-toggler bg-transparent" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon bg-transparent"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -53,40 +54,40 @@
                 <img src="../img/galeria4.jpg" alt="maldivas" class="galeria-img">
             </div>
             <div class="galeria-item">
-                <img src="../img/borabora/borabora (1).jpg" alt="maldivas" class="galeria-img">
+                <img src="../img/borabora (1).jpg" alt="maldivas" class="galeria-img">
             </div>
             <div class="galeria-item">
                 <img src="../img/destino2.jpg" alt="maldivas" class="galeria-img">
             </div>
             <div class="galeria-item">
-                <img src="../img/borabora/borabora (2).jpg" alt="maldivas" class="galeria-img">
+                <img src="../img/borabora (2).jpg" alt="maldivas" class="galeria-img">
             </div>
             <div class="galeria-item">
-                <img src="../img/thailand/tailandia (1).jpg" alt="maldivas" class="galeria-img">
+                <img src="../img/tailandia (1).jpg" alt="tailandia" class="galeria-img">
             </div>
             <div class="galeria-item">
-                <img src="../img/thailand/tailandia (2).jpg" alt="maldivas" class="galeria-img">
+                <img src="../img/tailandia (2).jpg" alt="tailandia" class="galeria-img">
             </div>
             <div class="galeria-item">
-                <img src="../img/Maldivas/maldivas (11).jpg" alt="maldivas" class="galeria-img">
+                <img src="../img/maldivas (11).jpg" alt="maldivas" class="galeria-img">
             </div>
             <div class="galeria-item">
-                <img src="../img/thailand/tailandia (4).jpg" alt="maldivas" class="galeria-img">
+                <img src="../img/tailandia (4).jpg" alt="tailandia" class="galeria-img">
             </div>
             <div class="galeria-item">
-                <img src="../img/thailand/tailandia (5).jpg" alt="maldivas" class="galeria-img">
+                <img src="../img/tailandia (5).jpg" alt="tailandia" class="galeria-img">
             </div>
             <div class="galeria-item">
-                <img src="../img/borabora/borabora (5).jpg" alt="maldivas" class="galeria-img">
+                <img src="../img/borabora (5).jpg" alt="bora bora" class="galeria-img">
             </div>
             <div class="galeria-item">
-                <img src="../img/Maldivas/maldivas (17).jpg" alt="maldivas" class="galeria-img">
+                <img src="../img/maldivas (17).jpg" alt="maldivas" class="galeria-img">
             </div>
             <div class="galeria-item">
-                <img src="../img/Maldivas/maldivas (18).jpg" alt="maldivas" class="galeria-img">
+                <img src="../img/maldivas (18).jpg" alt="maldivas" class="galeria-img">
             </div>
             <div class="galeria-item">
-                <img src="../img/Maldivas/maldivas (15).jpg" alt="maldivas" class="galeria-img">
+                <img src="../img/maldivas (15).jpg" alt="maldivas" class="galeria-img">
             </div>
         </div>
     </main>
