--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
     <meta name="keywords" content="playa, vuelos, paraiso, promociones, polinesia, maldivas, tailandia, tarjeta">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="icon" href="/img/favicom.png" type="image/x-icon">
 </head>
-<body class="index">
+<body class="index bg-transparent">
     <header>
-        <nav class="navbar  justify-content-end mx-auto navbar-expand-lg ">
-            <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+        <nav class="navbar  justify-content-end mx-5 navbar-expand-lg bg-transparent ">
+            <div class="container-fluid bg-transparent">
+            <button class="navbar-toggler bg-transparent" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon bg-transparent "></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="collapse navbar-collapse bg-transparent" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                    <a class="nav-link active " aria-current="page" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./pages/destinos.html">Destinos</a>
@@ -42,12 +43,7 @@
 <main class="index">
     <div class="portada">
         <div class="texto">
-            <h1 class="letra1">T</h1>
-            <h1 class="letra2">R</h1> 
-            <h1 class="letra3">A</h1> 
-            <h1 class="letra4">V</h1> 
-            <h1 class="letra5">E</h1> 
-            <h1 class="letra6">L</h1> 
+            <h1 class="letra1">TRAVEL</h1> 
         </div>
         <div class="portada-1"><img src="./img/portada1.jpg" alt="playa caribe"></div>
         <div class="portada-2"><img src="./img/portada2.jpg" alt="polinesia francesa"></div>
