--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,13 +8,15 @@
     <meta name="keywords" content="viajes, paraiso, playa, turismo, promociones, tailandia,turismo">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="icon" href="/img/favicom.png" type="image/x-icon">
+
 </head>
-<body>
+<body class="bodycontacto">
     <header>
-        <nav class="navbar  justify-content-end mx-auto navbar-expand-lg ">
-            <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+        <nav class="navbar  justify-content-end mx-5 ml-0 navbar-expand-lg bg-transparent">
+            <div class="container-fluid bg-transparent">
+            <button class="navbar-toggler bg-transparent" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon bg-transparent"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -39,36 +41,48 @@
         </nav>
     </header>
     <section class="contacto">
-        <h3>Contactanos</h3> <br>
+        <h1 class="titulo-tarjeta">Contáctanos</h1> <br>
         <p>¡Bienvenido a nuestro rincón de sueños tropicales! En la sección de contacto, estamos listos para hacer realidad tus planes de escapada paradisíaca. Ya sea que desees relajarte en playas de arena blanca, explorar exuberantes selvas tropicales o sumergirte en aguas cristalinas, nuestro equipo está aquí para personalizar tu experiencia perfecta. Contacta con nosotros y déjanos ser el puente hacia tus destinos soñados. ¡Tu paraíso personal te espera!</p>
     </section>
     <div class="linea"></div>
-    <div class="iconos">
-        <div class="icono-contacto">
-            <a href="https://www.google.com/maps/place/Buenos+Aires,+CABA/@-34.615796,-58.5156999,12z/data=!3m1!4b1!4m6!3m5!1s0x95bcca3b4ef90cbd:0xa0b3812e88e88e87!8m2!3d-34.6036844!4d-58.3815591!16zL20vMDFseTVt?entry=ttu" class="enlace-icono">
-            <img src="../img/marcador.png" alt="Icono de mapa"> </a>
-            <p>Ubicación</p>
-        </div>
-        <div class="icono-contacto">
-            <a href="https://www.instagram.com/" class="enlace-icono">
-                <img src="../img/ig.svg" alt="Logo de instagram"> </a>
-                <p>instagram</p>
-        </div>
-        <div class="icono-contacto-tarjeta">
-        <img src="../img/tarjeta.png" alt="icono tarjeta de credito">
-        <p>Todos<br> los medios<br> de pago</p>
-        </div>
-        <div class="icono-contacto">
-        <a href="https://avantrip.com/" class="enlace-icono">
-            <img src="../img/avion.png" alt="Icono de avion"> </a>
-            <p>Aviónes V.I.P</p>
-        </div>
-        <div class="icono-contacto">
-        <img src="../img/grupo.png" alt="icono grupo">
-        <p>Encontrá la <br> mejor compañía        </div>
-    </div>
-    <footer>
+    <section>
+        <form>
+            <div class="mb-4 col-6 mx-auto">
+                <label for="exampleFormControlInput1" class="form-label">Nombre Apellido</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="ingresa tu nombre">
+                </div>
+                <div class="mb-2 col-6 mx-auto">
+                    <label for="exampleFormControlInput1" class="form-label">E-mail </label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="ejemplo@gmail.com">
+                    </div>
+                <div class="mb-2 col-6 mx-auto">
+                <div class="mb-2 col-6 pb-xxl-5 mx-auto">
+                <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <button class="boton">Enviar</button>
+            </div>
+        </form>
+    </section>
+
+    <footer class="footercontacto">
         <p>©Copyright 2023 BelénBerón</p>
+        <div class="iconos">
+            <div class="icono-contacto">
+                <a href="https://www.google.com/maps/place/Buenos+Aires,+CABA/@-34.615796,-58.5156999,12z/data=!3m1!4b1!4m6!3m5!1s0x95bcca3b4ef90cbd:0xa0b3812e88e88e87!8m2!3d-34.6036844!4d-58.3815591!16zL20vMDFseTVt?entry=ttu" class="enlace-icono">
+                <img src="../img/icons8-mapas-de-google.svg" alt="Icono de mapa"> </a>
+            </div>
+            <div class="icono-contacto">
+                <a href="https://www.instagram.com/" class="enlace-icono">
+                    <img src="../img/ig.svg" alt="Logo de instagram"> </a>
+            </div>
+            <div class="icono-contacto-tarjeta">
+            <img src="../img/tarjeta.png" alt="icono tarjeta de credito">
+            </div>
+            <div class="icono-contacto">
+            <a href="https://avantrip.com/" class="enlace-icono">
+                <img src="../img/avion.png" alt="Icono de avion"> </a>
+            </div>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
