--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -8,13 +8,14 @@
     <meta name="keywords" content="playa, vuelos, paraiso, turismo, polinesia, maldivas, tarjeta">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="icon" href="/img/favicom.png" type="image/x-icon">
 </head>
-<body>
+<body class="bodydestino">
     <header>
-        <nav class="navbar  justify-content-end mx-auto navbar-expand-lg ">
-            <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+        <nav class="navbar  justify-content-end mx-5 navbar-expand-lg bg-transparent ">
+            <div class="container-fluid bg-transparent">
+            <button class="navbar-toggler bg-transparent" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon bg-transparent"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -46,12 +47,12 @@
             Relájate en las paradisíacas playas de Koh Samui, donde podrás disfrutar de emocionantes deportes acuáticos o simplemente entregarte al descanso. Sumérgete en la rica cultura e historia de Chiang Mai, una encantadora ciudad repleta de antiguos templos y mercados tradicionales. Embárcate en una apasionante aventura submarina en Koh Tao, renombrada por sus espectaculares arrecifes de coral.
             Deleita tus sentidos con la tranquilidad que ofrece el Parque Nacional de Erawan, hogar de impresionantes cascadas y aguas turquesas. Experimenta la serenidad de Railay Beach y aprovecha la emocionante oportunidad de escalar sus únicas formaciones rocosas.
             Con nuestro exclusivo paquete, Tailandia se convierte en tu destino de ensueño, repleto de una asombrosa belleza natural, una cultura fascinante y experiencias inolvidables. ¡Prepárate para sumergirte en el paraíso tailandés y crear recuerdos inolvidables!</p>
-    <img class="img1" src="../img/thailand/tailandia (1).jpg" alt="playa tailandia">
-    <img class="img2" src="../img/thailand/tailandia (2).jpg" alt="playa tailandia">
-    <img class="img3" src="../img/thailand/tailandia (3).jpg" alt="playa tailandia">
-    <img class="img4" src="../img/thailand/tailandia (4).jpg" alt="playa tailandia">
-    <img class="img5" src="../img/thailand/tailandia (5).jpg" alt="playa tailandia">
-    <img class="img6" src="../img/thailand/tailandia.jpg" alt="playa tailandia">
+    <img class="img1" src="../img/tailandia (1).jpg" alt="playa agua cristalina tailandia">
+    <img class="img2" src="../img/tailandia (2).jpg" alt="muelle tailandia">
+    <img class="img3" src="../img/tailandia (3).jpg" alt="playa arena blanca tailandia">
+    <img class="img4" src="../img/tailandia (4).jpg" alt="playa paradisiaca tailandia">
+    <img class="img5" src="../img/tailandia (5).jpg" alt="pasarela tailandia">
+    <img class="img6" src="../img/tailandia.jpg" alt="playa tailandia">
     </div>
     <h1 class="tailandia">Maldivas</h1>
     <div class="destinos">
@@ -59,12 +60,12 @@
             Relájate en las lujosas playas de complejos turísticos en Malé, donde podrás disfrutar de un ambiente exclusivo y servicios de primera clase. Embárcate en un viaje romántico en aguas turquesas en un bote tradicional dhoni y descubre la diversidad de la vida submarina en el atolón de Ari.
             Explora la rica cultura y la hospitalidad de las islas locales, donde podrás sumergirte en la vida cotidiana de los habitantes y descubrir tradiciones auténticas. Disfruta de la privacidad y el lujo en las villas sobre el agua en los complejos turísticos de lujo, donde cada momento se convierte en una experiencia única.
             Experimenta la maravilla de las Maldivas al relajarte en las impresionantes playas de arena blanca y explorar la vida marina multicolor mientras practicas snorkel. Con nuestro paquete exclusivo, las Maldivas se transforman en tu destino de sueños, lleno de belleza natural, lujo incomparable y momentos inolvidables. ¡Prepárate para sumergirte en el paraíso maldivo y crear recuerdos que perdurarán para siempre!</p>
-    <img class="img1" src="../img/Maldivas/maldivas (13).jpg" alt="playa maldivas">
-    <img class="img2" src="../img/Maldivas/maldivas (16).jpg" alt="playa maldivas">
-    <img class="img3" src="../img/Maldivas/maldivas (18).jpg" alt="playa maldivas">
-    <img class="img4" src="../img/Maldivas/maldivas (1).jpg" alt="playa maldivas">
-    <img class="img5" src="../img/Maldivas/maldivas (10).jpg" alt="playa maldivas">
-    <img class="img6" src="../img/Maldivas/maldivas (20).jpg" alt="playa maldivas">
+    <img class="img1" src="../img/maldivas (13).jpg" alt="oceano maldivas">
+    <img class="img2" src="../img/maldivas (16).jpg" alt="playa maldivas">
+    <img class="img3" src="../img/maldivas (18).jpg" alt="playa cristalina maldivas">
+    <img class="img4" src="../img/maldivas (1).jpg" alt="hospedaje maldivas">
+    <img class="img5" src="../img/maldivas (10).jpg" alt="arena de maldivas">
+    <img class="img6" src="../img/maldivas (20).jpg" alt="playa maldivas">
     </div>
     <h1 class="tailandia">Bora bora</h1>
     <div class="destinos">
@@ -72,12 +73,12 @@
             Relájate en las exclusivas villas sobre el agua, donde el lujo y la privacidad se fusionan para ofrecerte una experiencia inigualable. Disfruta de cenas románticas con vistas al atardecer y déjate llevar por la serenidad que ofrece este paraíso tropical.
             Embárcate en emocionantes excursiones en kayak o paddleboard, explorando la rica vida marina que habita en los arrecifes coralinos. Descubre la cultura polinesia en las islas locales, donde la hospitalidad y las tradiciones locales te sumergirán en un mundo único.
             Experimenta la magia de Bora Bora al bucear entre tiburones y rayas, o simplemente relájate en las playas de arena suave. Con nuestro paquete exclusivo, Bora Bora se convierte en tu destino de ensueño, repleto de belleza natural, lujo incomparable y experiencias que perdurarán toda la vida. ¡Prepárate para sumergirte en el encanto de Bora Bora y crear recuerdos inolvidables!</p>
-    <img class="img1" src="../img/borabora/borabora (1).jpg" alt="playa bora bora">
-    <img class="img2" src="../img/borabora/borabora (2).jpg" alt="playa bora bora">
-    <img class="img3" src="../img/borabora/borabora (3).jpg" alt="playa bora bora">
-    <img class="img4" src="../img/borabora/borabora (4).jpg" alt="playa bora bora">
-    <img class="img5" src="../img/borabora/borabora (5).jpg" alt="playa bora bora">
-    <img class="img6" src="../img/borabora/borabora (6).jpg" alt="playa bora bora">
+    <img class="img1" src="../img/borabora (1).jpg" alt="playa bora bora">
+    <img class="img2" src="../img/borabora (2).jpg" alt="paraiso bora bora">
+    <img class="img3" src="../img/borabora (3).jpg" alt="arena blanca bora bora">
+    <img class="img4" src="../img/borabora (4).jpg" alt="elefante bora bora">
+    <img class="img5" src="../img/borabora (5).jpg" alt="atardecer bora bora">
+    <img class="img6" src="../img/borabora (6).jpg" alt="playa bora bora">
     </div>
 </main>
     <footer>
