--- a/pages/oportunidades.html
+++ b/pages/oportunidades.html
@@ -8,16 +8,17 @@
     <meta name="keywords" content="viajes, compania, playa, vuelos, all inclusive,turismo">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="icon" href="/img/favicom.png" type="image/x-icon">
 </head>
-<body>
+<body class="bodyoportunidades"> 
     <header>
-            <nav class="navbar justify-content-end mx-auto navbar-expand-lg ">
-                <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+            <nav class="navbar justify-content-end mx-5 navbar-expand-lg bg-transparent">
+                <div class="container-fluid bg-transparent">
+                <button class="navbar-toggler bg-transparent" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon bg-transparent"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <div class="collapse navbar-collapse bg-transparent" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                     </li>
@@ -41,48 +42,47 @@
     <main>
         <div class="tarjetas ">
     <div class="card">
-        <img class="card-img mx-auto" src="../img/thailand/tailandia (1).jpg" alt="playa caribe">
+        <img class="card-img mx-auto" src="../img/tailandia (1).jpg" alt="playa caribe">
         <div class="card-content">
-            <h3>TAILANDIA ESCENCIAL</h3>
-            <p>Descubre la esencia de Tailandia perdiéndote por las ajetreadas calles de Bangkok y relájate en Phuket, la isla más grande del país.                No lo pienses más y haz la maleta,
+            <h3 class="titulo-tarjeta">TAILANDIA ESCENCIAL</h3>
+            <p>Descubre la esencia de Tailandia perdiéndote por las ajetreadas calles de Bangkok y relájate en Phuket, la isla más grande del país. No lo pienses más, estas son las vacaciones que soñaste, haz la maleta,
                 ¡Tailandia te está esperando!</p>
                 <div class="linea1"></div>
-                <img class="calendario" src="../img/icons8-calendario-40.png" alt="">
-                <h4>8 DIAS </h4>
+                <img class="calendario" src="../img/icons8-calendario-45.png"  alt="icono de calendario">
+                <h4 class="dias">8 DIAS </h4>
         </div>
     </div>
 
     <div class="card">
-        <img class="card-img mx-auto" src="../img/Maldivas/maldivas (20).jpg" alt="muelle polinesia">
+        <img class="card-img mx-auto" src="../img/maldivas (20).jpg" alt="muelle polinesia">
         <div class="card-content">
-            <h3>PLAYA RELAX MALDIVAS</h3>
+            <h3 class="titulo-tarjeta">PLAYA RELAX MALDIVAS</h3>
             <p>Las vacaciones relajantes que buscabas. Podrás disfrutar de las paradisíacas playas en Islas Maldivas. Agarra tu coco, acomódate en la tumbona y relájate, estás de vacaciones en Maldivas.</p>
             <div class="linea1"></div>
-            <img class="calendario" src="../img/icons8-calendario-40.png" alt="">
-            <h4>10 DIAS </h4>
-            
+            <img class="calendario" src="../img/icons8-calendario-45.png" alt=" icono de calendario">
+            <h4 class="dias">10 DIAS </h4>
         </div>
     </div>
 
     <div class="card">
         <img class="card-img mx-auto" src="../img/galeria2.jpg" alt="velero en maldivas">
         <div class="card-content">
-            <h3>BORA BORA EXTREMO</h3>
+            <h3 class="titulo-tarjeta">BORA BORA EXTREMO</h3>
             <p> Veni a donde la belleza natural, las experiencias relajantes y los momentos inolvidables se entrelazan para formar el escenario perfecto. Prepárate para vivir una serenidad única en Bora Bora.</p>
             <div class="linea1"></div>
-            <img class="calendario" src="../img/icons8-calendario-40.png" alt="">
-            <h4>7 DIAS </h4>
+            <img class="calendario" src="../img/icons8-calendario-45.png"  alt="icono de calendario">
+            <h4 class="dias">7 DIAS </h4>
         </div>
     </div>
 
     <div class="card">
         <img class="card-img mx-auto" src="../img/portada2.jpg" alt="muelle de madera ">
         <div class="card-content">
-            <h3>POLINESIA FRANCESA</h3>
-            <p> la Polinesia Francesa se convierte en tu refugio de paz, lleno de belleza natural y experiencias relajantes. ¡Prepárate para sumergirte y vivir unas vacaciones inolvidables!          </p>
+            <h3 class="titulo-tarjeta">POLINESIA FRANCESA</h3>
+            <p> La Polinesia Francesa se convierte en tu refugio de paz, lleno de belleza natural y experiencias relajantes. Este paquete tiene todo lo que necesitas ¡Prepárate para sumergirte y vivir unas vacaciones inolvidables!          </p>
             <div class="linea1"></div>
-            <img class="calendario" src="../img/icons8-calendario-40.png" alt="">
-            <h4>14 DIAS </h4>
+            <img class="calendario" src="../img/icons8-calendario-45.png"  alt="icono de calendario">
+            <h4 class="dias">14 DIAS </h4>
         </div>
     </div>
 </div>
